Fix footer on mobile
Prevents footer from hiding behind android nav buttons.

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a:hover {
 
 body {
 	margin: 0;
-	min-height: 100vh;
+	height: 100svh;
 	display: grid;
 	grid-template-rows: 75px 1fr 40px;
 }
